# SoccerHubRust

./: Cargo.toml  LICENSE
src/: config.rs  main.rs
