[package]
name = "SoccerHubRust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1.15"
lazy_static = "1.5.0"
anyhow = "1.0"
serde_json = "1.0.132"
serde_yaml = "0.9"  # 或者最新版本
serde_xml = "0.9.1"
yaml-rust = "0.4.5"
url = "2.5.2"
tokio = "1.41.0"
csv = "1.3.0"
futures = "0.3.31"

